--- a/index.html
+++ b/index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Ankush Kapoor Resume</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
-    embed {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
-</head>
-<body>
-  <embed src="pdf/Ankush Kapoor Resume.pdf" type="application/pdf">
-</body>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=pdf/Ankush Kapoor Resume.pdf">
+    <title>Redirecting to Resume</title>
+  </head>
+  <body>
+    <p>If you're not redirected automatically, <a href="pdf/Ankush Kapoor Resume.pdf">click here</a>.</p>
+  </body>
 </html>
