--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=pdf/Ankush Kapoor Resume.pdf">
+    <meta http-equiv="refresh" content="0; url=pdf/Ankush_Kapoor_Resume.pdf?v=1">
     <title>Redirecting to Resume</title>
   </head>
   <body>
-    <p>If you're not redirected automatically, <a href="pdf/Ankush Kapoor Resume.pdf">click here</a>.</p>
+    <p>If you're not redirected automatically, <a href="pdf/Ankush_Kapoor_Resume.pdf?v=1">click here</a>.</p>
   </body>
 </html>
