--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=pdf/ankush-kapoor-resume.pdf?v=1">
+    <meta http-equiv="refresh" content="0; url=pdf/ankush-kapoor-resume.pdf">
     <title>Redirecting to Resume</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
   </head>
   <body>
-    <p>If you're not redirected automatically, <a href="pdf/ankush-kapoor-resume.pdf?v=1">click here</a>.</p>
+    <p>If you're not redirected automatically, <a href="pdf/ankush-kapoor-resume.pdf">click here</a>.</p>
   </body>
 </html>
