--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=pdf/ankush-kapoor-resume.pdf">
     <title>Redirecting to Resume</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png" sizes="512x512">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+      window.onload = () => {
+        setTimeout(() => {
+          window.location.href = "pdf/ankush-kapoor-resume.pdf";
+        }, 400); // 400 ms delay
+      };
+    </script>
   </head>
   <body>
-    <p>If you're not redirected automatically, <a href="pdf/ankush-kapoor-resume.pdf">click here</a>.</p>
+    <p>If you're not redirected automatically, 
+      <a href="pdf/ankush-kapoor-resume.pdf">click here</a>.
+    </p>
   </body>
 </html>
