--- a/index.html
+++ b/index.html
@@ -41,4 +41,4 @@
 			window.location = "/pdf/ankush-kapoor-resume.pdf";
 		</script>
 	</body>
-</html><!-- updated at Thu Jun 26 19:21:00 UTC 2025 -->
+</html>
